# Tokenomicon

./: .gitignore  Cargo.toml  README.md  README.ru.md  config.yaml  rustfmt.toml
src/: main.rs
src/http/: api.rs
src/models/: request.rs  response.rs
src/service/: byte_level_bpe.rs  mod.rs  shared_state.rs  shared_tokenizer.rs  simple_tokenizer.rs  standard_bpe.rs  tokenizer.rs
src/setting/: settings.rs
