[package]
name = "tokenomicon"
version = "0.1.0"
authors = ["Artem Sergeev <...>"]
edition = "2024"

[dependencies]
log = "0.4.27"
axum = "0.8.3"
config = "0.15.11"
anyhow = "1.0.98"
serde_json = "1.0.140"
unicode-segmentation = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
